--- a/checkpoint_3/rag_game.ipynb
+++ b/checkpoint_3/rag_game.ipynb
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -144,7 +144,7 @@
       ],
       "source": [
         "SCRIPT_PATH = \"script.txt\"\n",
-        "CHROMA_PATH = \"./chroma_store1\"\n",
+        "CHROMA_PATH = \"./chroma_store\"\n",
         "COLLECTION_NAME = \"bojack_script\"\n",
         "\n",
         "client = chromadb.PersistentClient(path=CHROMA_PATH)\n",
