--- a/checkpoint_3/rag_game.ipynb
+++ b/checkpoint_3/rag_game.ipynb
@@ -213,7 +213,18 @@
       "source": [
         "Данные были аугментированы с помощью модели Gemini 3 Pro Preview (через интерфейс от Google). Промпт:\n",
         "\n",
-        "\"\"\"Мне нужно аугментировать данные для RAG-системы. Возьми скрипт «Коня БоДжека» и нагенерируй еще реплик, чтобы у меня было больше контента.\"\"\""
+        "\"\"\"\n",
+        "Мне нужно аугментировать данные для RAG-системы. \n",
+        "Возьми предоставленный скрипт эпизода из «BoJack Horseman» и сгенерируй дополнительные диалоги персонажей, чтобы увеличить объём контента для поиска релевантных фрагментов. \n",
+        "\n",
+        "Требования к генерации:\n",
+        "1. Реплики должны соответствовать личности и стилю конкретного персонажа.\n",
+        "2. Сохраняй контекст сцены и эмоциональное состояние героев.\n",
+        "3. Добавляй разнообразие фраз, но не меняй факты и события, описанные в скрипте.\n",
+        "4. Форматируй результат так, чтобы каждая новая реплика была отдельной строкой с указанием персонажа.\n",
+        "5. Диалоги разделяй с помощью ENT:\n",
+        "\n",
+        "\"\"\""
       ]
     },
     {
